# eip1962_cpp

./: Cargo.toml  README.md  build.rs  transform_models.sh
eip1962cpp/include/benchmark/: benchmark.h
eip1962cpp/include/ctbignum/: addition.hpp  arith.h  bitshift.hpp  io.hpp  montgomery.hpp  utility.hpp
eip1962cpp/src/: addition.hpp  api.cpp  api.h  bls12_model.h  bn_model.h  common.cpp  common.h  constants.h  curve.h  deserialization.cpp  deserialization.h  division.hpp  element.h  features.h  field.h  fp.h  g1_addition.h  g1_multiplication.h  g2_addition_ext2.h  g2_addition_ext3.h  g2_multiplication_ext2.h  g2_multiplication_ext3.h  gas_meter.cpp  gas_meter.h  integer_sequence.hpp  mnt4_model.h  mnt6_model.h  mult.hpp  multiexp_discounts.h  operation.h  relational_ops.hpp  repr.cpp  repr.h  shift.hpp  slicing.hpp  tests.cpp  type_traits.hpp  wrapper.cpp  wrapper.h
eip1962cpp/src/extension_towers/: common.h  fp12.h  fp2.h  fp3.h  fp4.h  fp6_2.h  fp6_3.h  fpM2.h
eip1962cpp/src/pairings/: b_engine.h  bls12.h  bn.h  mnt.h
src/: api.rs  enums.rs  lib.rs
